<resources>
    <string name="app_name">E-Commmerce Fixed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_page_welcome">Welcome back 👋🏻</string>
    <string name="signup_page_subtitle">Dont miss the opportunity to easily find your dream deals</string>
    <string name="google_sign_up">Sign Up with Google</string>
    <string name="log_in_to_my_account">Log In to my Account</string>
    <string name="terms_of_services">By contibuting you agree to Store Terms of Services and Privacy Policy</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="login_screen_subtitle">Welcome back to our store continue your personal adventure and access all our offer</string>
    <string name="login_screen_title">Log In to Your Account</string>
    <string name="forgot_password">forgot password ?</string>
    <string name="signup_title">Create Your Account</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="confirm_password">confirm password</string>
    <string name="facebook_sign_up">ٍSign Up with Facebook</string>
    <string name="email_sign_up">Sign Up with Email</string>
    <string name="search_for_product">Search Products</string>
    <string name="profile_icon">Profile icon</string>
    <string name="card_title">Explore Todays Deals</string>
    <string name="card_subtitle">Discover exclusive discounts and exciting offers</string>
    <string name="card_start_now">Start Now</string>
    <string name="categories">Categories</string>
    <string name="exclusive">Exclusive</string>
</resources>