<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.main.welcome.WelcomeFragment">

        <ImageView
            android:id="@+id/icon_welcome"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintBottom_toTopOf="@id/welcome_tv"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/guideline1"
            />

        <TextView
            android:id="@+id/welcome_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/rubik_variablefont_wght"
            android:text="@string/login_page_welcome"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/subtitle_tv"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/icon_welcome" />

        <TextView
            android:id="@+id/subtitle_tv"
            android:layout_width="0dp"
            android:layout_height="67dp"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/rubik_variablefont_wght"
            android:text="@string/signup_page_subtitle"
            android:textAlignment="center"
            android:textColor="#5e5e5e"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/welcome_tv" />

        <Button
            android:id="@+id/btn1"
            style="@style/SignUpButtonStyle"
            android:layout_height="66dp"
            android:text="@string/google_sign_up"
            app:icon="@drawable/google_ic"
            app:iconTint="@null"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/subtitle_tv" />

        <Button
            android:id="@+id/btn2"
            style="@style/SignUpButtonStyle"
            android:layout_height="66dp"
            android:layout_marginTop="8dp"
            android:text="@string/facebook_sign_up"
            app:icon="@drawable/facebook_ic"
            app:iconTint="@null"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/btn1" />

        <Button
            android:id="@+id/btn3"
            style="@style/SignUpButtonStyle"
            android:layout_height="67dp"
            android:layout_marginTop="8dp"
            android:text="@string/email_sign_up"
            app:icon="@drawable/mail_ic"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/btn2" />

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/btn3">

            <include layout="@layout/divider_with_text" />

        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            style="@style/MainButton"
            android:text="@string/log_in_to_my_account"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/linearlayout" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/terms_of_services"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toEndOf="@id/guideline2" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>