<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_title"
            android:textSize="18sp"
            android:textAlignment="textStart"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_subtitle"
            android:textSize="14sp"
            android:layout_marginBottom="5dp"
            android:textAlignment="textStart"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_start_now"
            android:textColor="@color/md_theme_primary"
            android:textSize="14sp"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:textAlignment="textStart"/>


    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/cardImageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/headset_pic"
        android:scaleType="fitEnd"/>

</LinearLayout>