<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.e_commmercefixed.fragments.main.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.main.login.LoginFragment">

        <TextView
            android:id="@+id/welcome_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/rubik_variablefont_wght"
            android:text="@string/login_screen_title"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/subtitle_tv"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/guideline1" />

        <TextView
            android:id="@+id/subtitle_tv"
            android:layout_width="0dp"
            android:layout_height="67dp"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/rubik_variablefont_wght"
            android:text="@string/login_screen_subtitle"
            android:textAlignment="center"
            android:textColor="#5e5e5e"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/welcome_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:helperTextEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/password_layout"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/subtitle_tv"
            app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent"
            app:startIconDrawable="@drawable/mail_ic">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailOutlinedTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/login_btn"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/email_text_box">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                app:endIconMode="password_toggle"
                app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent"
                app:startIconDrawable="@drawable/password_ic">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordOutlinedTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgot_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/forgot_password"
                android:textColor="@color/md_theme_primary" />

        </LinearLayout>


        <Button
            android:id="@+id/login_btn"
            style="@style/MainButton"
            android:layout_marginTop="16dp"
            android:text="@string/log_in_to_my_account"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/password_layout" />

        <TextView
            android:id="@+id/policy_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/terms_of_services"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toEndOf="@id/guideline2" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>