<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".fragments.main.login.LoginFragment">

            <TextView
                android:id="@+id/welcome_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:text="@string/signup_title"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/subtitle_tv"
                app:layout_constraintEnd_toStartOf="@id/guideline3"
                app:layout_constraintStart_toEndOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/guideline1" />

            <TextView
                android:id="@+id/subtitle_tv"
                android:layout_width="0dp"
                android:layout_height="67dp"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:text="@string/signup_page_subtitle"
                android:textAlignment="center"
                android:textColor="#5e5e5e"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/guideline3"
                app:layout_constraintStart_toEndOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/welcome_tv" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_text_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@id/last_name_text_box"
                app:layout_constraintEnd_toStartOf="@id/guideline3"
                app:layout_constraintStart_toEndOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/subtitle_tv"
                app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent"
                app:startIconDrawable="@drawable/ic_profile">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_text_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@id/email_text_box"
                app:layout_constraintEnd_toStartOf="@id/guideline3"
                app:layout_constraintStart_toEndOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/first_name_text_box"
                app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent"
                app:startIconDrawable="@drawable/ic_last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@id/password_text_box"
                app:layout_constraintEnd_toStartOf="@id/guideline3"
                app:layout_constraintStart_toEndOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/last_name_text_box"
                app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent"
                app:startIconDrawable="@drawable/mail_ic">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@id/confirm_password_text_box"
                app:layout_constraintEnd_toStartOf="@id/guideline3"
                app:layout_constraintStart_toEndOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/email_text_box"
                app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent"
                app:startIconDrawable="@drawable/password_ic"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_text_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/login_btn"
                app:layout_constraintEnd_toStartOf="@id/guideline3"
                app:layout_constraintStart_toEndOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/password_text_box"
                app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent"
                app:startIconDrawable="@drawable/password_ic"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/login_btn"
                style="@style/MainButton"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up_button"
                app:layout_constraintEnd_toStartOf="@id/guideline3"
                app:layout_constraintStart_toEndOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/confirm_password_text_box" />

            <TextView
                android:id="@+id/policy_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/terms_of_services"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/login_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline3"
                app:layout_constraintStart_toEndOf="@id/guideline2" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>